kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wa-bot-ai-service
  labels:
    app: wa-bot-ai
    environment: development
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8000
      protocol: TCP
  selector:
    app: wa-bot-ai
